[gd_scene load_steps=3 format=2]

[ext_resource path="res://example/main.gd" type="Script" id=1]
[ext_resource path="res://example/white.png" type="Texture" id=2]

[node name="main" type="Node2D"]

script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="background" type="TextureRect" parent="ui"]

modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="ip_address" type="LineEdit" parent="ui"]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = 192.0
margin_top = 100.0
margin_right = 2.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "127.0.0.1"
expand_to_len = false
focus_mode = 2
placeholder_text = "IPv4 Address"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Anchor", "Placeholder", "Rect", "Size Flags" ]

[node name="port" type="LineEdit" parent="ui"]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = -18.0
margin_top = 100.0
margin_right = -208.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "6969"
expand_to_len = false
focus_mode = 2
placeholder_text = "Port"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Anchor", "Placeholder", "Rect", "Size Flags" ]

[node name="max_players" type="LineEdit" parent="ui"]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = 192.0
margin_top = 50.0
margin_right = 2.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "32"
expand_to_len = false
focus_mode = 2
placeholder_text = "Max Players"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Anchor", "Placeholder", "Rect", "Size Flags" ]

[node name="player_name" type="LineEdit" parent="ui"]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = -18.0
margin_top = 50.0
margin_right = -208.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Player"
expand_to_len = false
focus_mode = 2
placeholder_text = "Player Name"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Anchor", "Placeholder", "Rect", "Size Flags" ]

[node name="dedicated" type="CheckBox" parent="ui"]

margin_left = 320.0
margin_top = 290.0
margin_right = 346.0
margin_bottom = 313.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="message" type="Label" parent="ui"]

margin_left = 320.0
margin_top = 320.0
margin_right = 720.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="host" type="Button" parent="ui"]

margin_left = 320.0
margin_top = 340.0
margin_right = 510.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host"
flat = false
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="connect" type="Button" parent="ui"]

margin_left = 530.0
margin_top = 340.0
margin_right = 720.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Connect"
flat = false
_sections_unfolded = [ "Rect", "Size Flags" ]


